[gd_scene load_steps=5 format=3 uid="uid://ck00y8tcc0p7q"]

[ext_resource type="Script" path="res://player.gd" id="2_huqim"]
[ext_resource type="Texture2D" uid="uid://cwqyxw64pps3i" path="res://5. Icons/boat_pixelart.png" id="2_yphp6"]
[ext_resource type="Script" path="res://ui.gd" id="3_8iex2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_okyxk"]
size = Vector2(59, 44)

[node name="Main" type="Node2D"]
position = Vector2(628, 248)

[node name="Player" type="CharacterBody2D" parent="."]
script = ExtResource("2_huqim")
speed_limit = null
slow_rate = null
area_color = null

[node name="Boat" type="Sprite2D" parent="Player"]
position = Vector2(0.999994, -1)
scale = Vector2(0.284545, 0.276786)
texture = ExtResource("2_yphp6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(-4, 2)
shape = SubResource("RectangleShape2D_okyxk")

[node name="UI" type="CanvasLayer" parent="."]

[node name="BoatControlUI" type="VBoxContainer" parent="UI"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -53.0
offset_top = -158.0
offset_right = 54.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("3_8iex2")

[node name="TopRow" type="HBoxContainer" parent="UI/BoatControlUI"]
layout_mode = 2

[node name="Button1" type="Button" parent="UI/BoatControlUI/TopRow"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2

[node name="btn_up" type="Button" parent="UI/BoatControlUI/TopRow"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
action_mode = 0
text = "⬆"

[node name="Button3" type="Button" parent="UI/BoatControlUI/TopRow"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2

[node name="MidRow" type="HBoxContainer" parent="UI/BoatControlUI"]
layout_mode = 2

[node name="btn_left" type="Button" parent="UI/BoatControlUI/MidRow"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
action_mode = 0
text = "⬅"

[node name="Button5" type="Button" parent="UI/BoatControlUI/MidRow"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2

[node name="btn_right" type="Button" parent="UI/BoatControlUI/MidRow"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
action_mode = 0
text = "⮕"

[node name="ButtomRow" type="HBoxContainer" parent="UI/BoatControlUI"]
layout_mode = 2

[node name="Button7" type="Button" parent="UI/BoatControlUI/ButtomRow"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2

[node name="btn_down" type="Button" parent="UI/BoatControlUI/ButtomRow"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
action_mode = 0
text = "⬇"

[node name="Button9" type="Button" parent="UI/BoatControlUI/ButtomRow"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
